--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {   
   "name": "InvaNodeCMS-mongo",
-  "description": "IvaNode - open source content management system based on Node.js",
-  "keywords": ["InvaNode", "node.js", "CMS"],
-  "version": "0.1.4",
+  "description": "IvaNode - open source cloud CMS based on Node.js",
+  "keywords": ["InvaNode", "node.js", "CMS", "cloud"],
+  "version": "0.1.5",
   "author": "Ivan Vetrov <i.vetrov@gmail.com>, Invatechs <info@invatechs.com>",
   "repository": {
     "type" :  "git",
     "url": "http://github.com/i-vetrov/InvaNode-mongo.git"
   },
   "dependencies": {
-    "mongodb": "1.2.13"
+    "mongodb": "1.2.13",
+    "iskvs": "0.0.2"
   },
   "engines": {
     "node": ">=0.8"
